@@ -62,18 +62,15 @@ func HttpInputSpec(c gs.Context) {
 		// These assume that every sub-spec makes exactly one HTTP request.
 		ith.MockInputRunner.EXPECT().NewSplitterRunner("0").Return(ith.MockSplitterRunner)
 		ith.MockSplitterRunner.EXPECT().Done()
-		getRecCall := ith.MockSplitterRunner.EXPECT().GetRecordFromStream(gomock.Any())
-		getRecCall.Return(len(json_post), []byte(json_post), io.EOF)
+
+		splitCall := ith.MockSplitterRunner.EXPECT().SplitStreamNullSplitterToEOF(gomock.Any(), nil)
+		splitCall.Return(io.EOF)
 		ith.MockSplitterRunner.EXPECT().UseMsgBytes().Return(false)
 		decChan := make(chan func(*PipelinePack), 1)
 		packDecCall := ith.MockSplitterRunner.EXPECT().SetPackDecorator(gomock.Any())
 		packDecCall.Do(func(dec func(*PipelinePack)) {
 			decChan <- dec
 		})
-		ith.MockSplitterRunner.EXPECT().DeliverRecord([]byte(json_post), nil)
-		ith.MockSplitterRunner.EXPECT().IncompleteFinal().Return(false).AnyTimes()
-		splitter := &TokenSplitter{} // not actually used
-		ith.MockSplitterRunner.EXPECT().Splitter().Return(splitter)
 
 		c.Specify("honors time ticker to flush", func() {
 			// Spin up a http server.
@@ -185,7 +182,7 @@ func HttpInputSpec(c gs.Context) {
 			err = httpInput.Init(config)
 			c.Assume(err, gs.IsNil)
 			respBodyChan := make(chan []byte, 1)
-			getRecCall.Do(func(r io.Reader) {
+			splitCall.Do(func(r io.Reader, d Deliverer) {
 				respBody := make([]byte, len(config.Body))
 				n, err := r.Read(respBody)
 				c.Expect(n, gs.Equals, len(config.Body))
