@@ -5,7 +5,12 @@ Features
 --------
 
 * Allow multiple sandbox module directories to be specified (#1525).
-* Add Nginx stub status lua sandbox decoder
+
+* Add Nginx stub status lua sandbox decoder.
+
+* Added `SplitStreamNullSplitterToEOF` to SplitterRunner interface so input
+  plugins can avoid generating messages with whatever happens to come back from
+  a `Read()` call.
 
 Bug Handling
 ------------
@@ -13,6 +18,9 @@ Bug Handling
 * Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).
 
 * Fixed ProcessInput hangs when splitter is defined (#1620, #1644).
+
+* Fixed ProcessInput not getting process's full output when NullSplitter is in
+  use (#1645).
 
 0.10.0b0 (2015-07-13)
 =====================
